Fixes the overlapping click control between the collapsed tabs and the drag handles

--- a/src/components/document/resize-panel-divider.scss
+++ b/src/components/document/resize-panel-divider.scss
@@ -30,9 +30,10 @@
       display: flex;
       flex-direction: row;
       position: relative;
+      left: 0;
       width: 44px;
       height: 44px;
-      z-index: 3;
+      z-index: 1;
       top: 50%;
       opacity: 0.01%;
       &:hover {
@@ -41,27 +42,27 @@
         opacity: 100%;
       }
     }
-
-      .left-right-drag {
-        position: absolute;
-        left: 0;
-        z-index: 2;
-      }
       .drag-left-handle {
-        position: relative;
+        position: absolute;
         width: 21px;
         height: 100%;
         left: 0;
         z-index: 3;
         cursor: pointer;
+        &.disabled {
+          visibility: hidden;
+        }
       }
       .drag-right-handle {
-        position: relative;
+        position: absolute;
         width: 21px;
         height: 100%;
         right: 0;
         z-index: 3;
         cursor: pointer;
+        &.disabled {
+          visibility: hidden;
+        }
       }
     }
   }
